--- a/timeline.html
+++ b/timeline.html
@@ -40,7 +40,6 @@
       <div id="myLinks">
         <a href="index.html">Home</a>
         <a href="timeline.html">Timeline</a>
-        <a href="project.html">Project</a>
       </div>
       <!--Nav Menu-->
       <a href="javascript:void(0);" class="icon" onclick="myMenu()">
@@ -87,20 +86,22 @@
               <div class="timeline-badge danger"><i class="glyphicon glyphicon-credit-card"></i></div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
-                  <h4 class="timeline-title">Mussum ipsum cacilds</h4>
+                  <h4 class="timeline-title">Present at Boulder, CO</h4>
+                  <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i>January 15th 2020</small></p>
+
                 </div>
                 <div class="timeline-body">
-                  <p>Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros vermeio, in elementis mé pra quem é amistosis quis leo. Manduma pindureta quium dia nois paga. Sapien in monti palavris qui num significa nadis i pareci latim. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.</p>
                 </div>
               </div>
             </li>
             <li class="timeline-inverted">
               <div class="timeline-panel">
                 <div class="timeline-heading">
-                  <h4 class="timeline-title">Mussum ipsum cacilds</h4>
+                  <h4 class="timeline-title">Begin Creating Course Content</h4>
+                  <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i>February 15th 2020</small></p>
+
                 </div>
                 <div class="timeline-body">
-                  <p>Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros vermeio, in elementis mé pra quem é amistosis quis leo. Manduma pindureta quium dia nois paga. Sapien in monti palavris qui num significa nadis i pareci latim. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.</p>
                 </div>
               </div>
             </li>
@@ -108,22 +109,15 @@
               <div class="timeline-badge info"><i class="glyphicon glyphicon-floppy-disk"></i></div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
-                  <h4 class="timeline-title">Mussum ipsum cacilds</h4>
+                  <h4 class="timeline-title">Open up to Other Courses</h4>
+                  <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i>March 25th 2020</small></p>
+
                 </div>
                 <div class="timeline-body">
-                  <p>Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros vermeio, in elementis mé pra quem é amistosis quis leo. Manduma pindureta quium dia nois paga. Sapien in monti palavris qui num significa nadis i pareci latim. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.</p>
+                    <p>Begin opening up Doenet to use for other courses, mainly for testing purposes</p>
                   <hr>
                   <div class="btn-group">
-                    <button type="button" class="btn btn-primary btn-sm dropdown-toggle" data-toggle="dropdown">
-                      <i class="glyphicon glyphicon-cog"></i> <span class="caret"></span>
                     </button>
-                    <ul class="dropdown-menu" role="menu">
-                      <li><a href="#">Action</a></li>
-                      <li><a href="#">Another action</a></li>
-                      <li><a href="#">Something else here</a></li>
-                      <li class="divider"></li>
-                      <li><a href="#">Separated link</a></li>
-                    </ul>
                   </div>
                 </div>
               </div>
@@ -131,21 +125,19 @@
             <li>
               <div class="timeline-panel">
                 <div class="timeline-heading">
-                  <h4 class="timeline-title">Mussum ipsum cacilds</h4>
+                  <h4 class="timeline-title">Use Testing From Other Courses For New Features</h4>
                 </div>
                 <div class="timeline-body">
-                  <p>Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros vermeio, in elementis mé pra quem é amistosis quis leo. Manduma pindureta quium dia nois paga. Sapien in monti palavris qui num significa nadis i pareci latim. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.</p>
-                </div>
+              </div>
               </div>
             </li>
             <li class="timeline-inverted">
               <div class="timeline-badge success"><i class="glyphicon glyphicon-thumbs-up"></i></div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
-                  <h4 class="timeline-title">Mussum ipsum cacilds</h4>
+                  <h4 class="timeline-title">Begin the process towards making Doenet Open Source</h4>
                 </div>
                 <div class="timeline-body">
-                  <p>Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros vermeio, in elementis mé pra quem é amistosis quis leo. Manduma pindureta quium dia nois paga. Sapien in monti palavris qui num significa nadis i pareci latim. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.</p>
                 </div>
               </div>
             </li>
