--- a/index.html
+++ b/index.html
@@ -34,8 +34,9 @@
     <!--Nav Bar-->
     <div id="top-part">
     <div id="topnav" class="topnav">
-      <a href="#home" class="active" id="resume1">Doenet
-        <link rel="icon" href="img/resume-favicon.png" type="image/x-icon"></a>
+      <a href="#home" class="active" id="resume1">Doenet        
+
+        <link href="img/logo.png"></a>
       <!-- Nav Links-->
       <div id="myLinks">
         <a href="index.html">Home</a>
@@ -84,7 +85,7 @@
         </div>
       </div>
       <div class="col-sm-3">
-        <div class="card" id=reminder-card><h2>Educational Researchers</h2><p id="car-content">Educational Researchers will be the sciencetists behind the Doenet operation.  Because all learning within Doenet will be monitored for performance and student interaction, educational researchers will be able to analyze this data to determine how to best improve content and learning for students.</p>
+        <div class="card" id=reminder-card><h2>Educational Researchers</h2><p id="card-content">Educational Researchers will be the sciencetists behind the Doenet operation.  Because all learning within Doenet will be monitored for performance and student interaction, educational researchers will be able to analyze this data to determine how to best improve content and learning for students.</p>
           <div class="card-body vessel4">
             <div class="button4">
             </div>
@@ -102,7 +103,7 @@
 
     </div>
     <footer>
-      Copyright© 2019 DoenetCore
+      Copyright© 2019 DoenetCore<br><img id="logo" src="img/logo.png">
     </footer>
   </div>
 </body>
