--- a/timeline.html
+++ b/timeline.html
@@ -52,6 +52,14 @@
     <hr class="my-4">
 </div>
     <p id="intro">Doenet hopes to fully be ready to use in five years.  This deadline is set far out on purpose, as the project team intends to complete the project before then.  Right now, the project is in its early stages of development, with basic building of the admin, editor, and course functionality underway.  The first deadline is by January 15th, when the project is presented in Boulder, CO.</p>
+   <p style="padding-left: 15px;">The development process is broken down into these three categories during our team meetings:</p>
+    <ol>
+        <li>Design</li>
+        <li>Features</li>
+        <li>Functionality</li>
+
+
+    </ol>
     <div class="container">
         <div class="page-header">
             <h1 id="timeline">Project Timeline</h1>
@@ -153,8 +161,8 @@
 
     </div>
     <footer>
-      Copyright© 2019 DoenetCore
-    </footer>
+            Copyright© 2019 DoenetCore<br><img id="logo" href="index.html" src="img/logo.png">
+        </footer>
   </div>
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
