--- a/timeline.html
+++ b/timeline.html
@@ -40,6 +40,7 @@
       <div id="myLinks">
         <a href="index.html">Home</a>
         <a href="timeline.html">Timeline</a>
+        <a href="contact.html">Contact</a>
       </div>
       <!--Nav Menu-->
       <a href="javascript:void(0);" class="icon" onclick="myMenu()">
