--- a/contact.html
+++ b/contact.html
@@ -106,7 +106,7 @@
 
     </div>
     <footer>
-      Copyright© 2019 DoenetCore<br><img id="logo" src="img/logo.png">
+      Copyright© 2019 DoenetCore<br>
     </footer>
   </div>
 </body>
