--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
     integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 
+  <!--Google Fonts-->
+    <link href="https://fonts.googleapis.com/css?family=Lobster&display=swap" rel="stylesheet">
+
   <!--Script-->
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"
     integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
@@ -30,9 +33,11 @@
   </script>
 
   <div id="container">
+    
 
     <!--Nav Bar-->
     <div id="top-part">
+        <img src="DoenetLogo.png" style="height:60px; width:60px;"></h1>
     <div id="topnav" class="topnav">
       <a href="#home" class="active" id="resume1">Doenet        
 
@@ -48,13 +53,13 @@
         <i class="fa fa-bars"></i>
       </a>
     </div>
-    <h1 class="display-4" id="resume">Doenet</h1>
+    <h1 style="font-family:'Lobster', cursive; color:#752042;"class="display-4" id="resume">D<img src="DoenetLogo.png" style="height:40px; width:30px;">enet</h1>
 
     <p class="lead" id="subtitle"></p>
     <hr class="my-4">
   </div>
     <p></p>
-
+<h2 id="intro">Welcome to Doenet</h2>
     <p id="intro">
       Doenet is the name of a future open source math learning tool created by the College of Science and Engineering at the University of Minnesota - Twin Cities.  that will eventually extend to other subjects, areas, and universities.  The basic outline of the project has a similar feel to Canvas, Moodle, or other assignment tracking tools, yet it also incorporates a working editor that allows for mathematical graphing, problem solving, and interactive learning and test taking.  The project is expected to take five years in total, with an open source launch set for January of 2021.  The current project team consists of an upper-level math professor, a project manager, a full-time programmer, and three student developers.  Once the tool is complete, the idea will be to have a self-sustaining team of students, instructors, content creators, and educational researchers that each play a role in making the tool more useful and functional.</p>
     </p>
@@ -104,7 +109,7 @@
 
     </div>
     <footer>
-      Copyright© 2019 DoenetCore<br><img id="logo" src="img/logo.png">
+      Copyright© 2019 DoenetCore<br>
     </footer>
   </div>
 </body>
@@ -122,14 +127,14 @@
       setTimeout(typeWriter, speed);
     }
   }
-  function myMenu() {
-    var x = document.getElementById("myLinks");
-    if (x.style.display === "block") {
-      x.style.display = "none";
-    } else {
-      x.style.display = "block";
-    }
-  }
+  // function myMenu() {
+  //   var x = document.getElementById("myLinks");
+  //   if (x.style.display === "block") {
+  //     x.style.display = "none";
+  //   } else {
+  //     x.style.display = "block";
+  //   }
+  // }
 </script>
 </div>
 
