--- a/timeline.html
+++ b/timeline.html
@@ -4,7 +4,7 @@
 <head>
   <title>Doenet</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" href="img/resume-favicon.png" type="image/x-icon">
+
   <!--Bootstrap-->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -35,8 +35,8 @@
     <div id="top-part">
     <div class="topnav">
       <a href="#home" class="active" id="resume1">Doenet
-        <link rel="icon" href="img/resume-favicon.png" type="image/x-icon"></a>
-      <!-- Nav Links-->
+
+        <!-- Nav Links-->
       <div id="myLinks">
         <a href="index.html">Home</a>
         <a href="timeline.html">Timeline</a>
@@ -162,7 +162,7 @@
 
     </div>
     <footer>
-            Copyright© 2019 DoenetCore<br><img id="logo" href="index.html" src="img/logo.png">
+            Copyright© 2019 DoenetCore<br>
         </footer>
   </div>
 </body>
