--- a/index.html
+++ b/index.html
@@ -37,23 +37,9 @@
 
     <!--Nav Bar-->
     <div id="top-part">
-        <img src="DoenetLogo.png" style="height:60px; width:60px;"></h1>
-    <div id="topnav" class="topnav">
-      <a href="#home" class="active" id="resume1">Doenet        
-
-        <link href="img/logo.png"></a>
-      <!-- Nav Links-->
-      <div id="myLinks">
-        <a href="index.html">Home</a>
-        <a href="timeline.html">Timeline</a>
-        <a href="contact.html">Contact</a>
-      </div>
-      <!--Nav Menu-->
-      <a href="javascript:void(0);" class="icon" onclick="myMenu()">
-        <i class="fa fa-bars"></i>
-      </a>
-    </div>
-    <h1 style="font-family:'Lobster', cursive; color:#752042;"class="display-4" id="resume">D<img src="DoenetLogo.png" style="height:40px; width:30px;">enet</h1>
+        <p style="font-family:'Lobster', cursive; color:#752042;"class="display-4" id="resume"><a href="index.html">D<img src="DoenetLogo.png" style="height:40px; width:30px;">enet</a></>
+       
+    <h1 style="font-family:'Lobster', cursive; color:#752042;"class="display-4" id="resume"><a href="index.html">D<img src="DoenetLogo.png" style="height:40px; width:30px;">enet</a></h1>
 
     <p class="lead" id="subtitle"></p>
     <hr class="my-4">
