--- a/timeline.html
+++ b/timeline.html
@@ -22,34 +22,17 @@
 
 </head>
 
-<body onload="typeWriter()">
-  <script>document.body.className += ' fade-out';
-    $(function () {
-      $('body').removeClass('fade-out');
-    });
-  </script>
+<body>
+
 
   <div id="container">
 
     <!--Nav Bar-->
     <div id="top-part">
-    <div class="topnav">
-      <a href="#home" class="active" id="resume1">Doenet
+              <p style="font-family:'Lobster', cursive; color:#752042;"class="display-4" id="resume"><a href="index.html">D<img src="DoenetLogo.png" style="height:40px; width:30px;">enet</a></p>
 
-        <!-- Nav Links-->
-      <div id="myLinks">
-        <a href="index.html">Home</a>
-        <a href="timeline.html">Timeline</a>
-        <a href="contact.html">Contact</a>
-      </div>
-      <!--Nav Menu-->
-      <a href="javascript:void(0);" class="icon" onclick="myMenu()">
-        <i class="fa fa-bars"></i>
-      </a>
-    </div>
-    <h1 class="display-4" id="resume">Doenet</h1>
+ 
 
-    <p class="lead" id="subtitle"></p>
     <hr class="my-4">
 </div>
     <p id="intro">Doenet hopes to fully be ready to use in five years.  This deadline is set far out on purpose, as the project team intends to complete the project before then.  Right now, the project is in its early stages of development, with basic building of the admin, editor, and course functionality underway.  The first deadline is by January 15th, when the project is presented in Boulder, CO.</p>
