--- a/contact.html
+++ b/contact.html
@@ -28,9 +28,19 @@
 
     <!--Nav Bar-->
     <div id="top-part">
-        <p style="font-family:'Lobster', cursive; color:#752042;"class="display-4" id="resume"><a href="index.html">D<img src="DoenetLogo.png" style="height:40px; width:30px;">enet</a></p>
-
-   
+        <nav class="navbar navbar-expand-lg navbar-light bg-light"><p style="font-family:'Lobster', cursive; color:#752042; display: inline; font-size: 30px;"class="display-4" id="resume"><a href="index.html">D<img src="DoenetLogo.png" style="height:15px; width:10px;">enet</a></p>
+            <a class="navbar-brand" href="#"></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+              <div class="navbar-nav">
+                <a class="nav-item nav-link" href="index.html">Home </a>
+                <a class="nav-item nav-link" href="timeline.html">Timeline</a>
+                <a class="nav-item nav-link active" href="contact.html">Contact<span class="sr-only">(current)</span></a>
+              </div>
+            </div>
+          </nav> 
 
     <p class="lead" id="subtitle"></p>
     <hr class="my-4">
