--- a/contact.html
+++ b/contact.html
@@ -41,6 +41,8 @@
               </div>
             </div>
           </nav> 
+          <h1 style="font-family:'Lobster', cursive; color:#752042;"class="display-4" id="resume"><a href="#">Contact</a></h1>
+
 
     <p class="lead" id="subtitle"></p>
     <hr class="my-4">
