--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </nav> 
     <h1 style="font-family:'Lobster', cursive; color:#752042;"class="display-4" id="resume"><a href="index.html">D<img src="DoenetLogo.png" style="height:40px; width:30px;">enet</a></h1>
 
-    <p class="lead" id="subtitle"></p>
+    <p class="lead" id="subtitle" style="font-family: 'Lobster', cursive; color:#752042;"></p>
     <hr class="my-4">
   </div>
     <p></p>
