--- a/timeline.html
+++ b/timeline.html
@@ -42,7 +42,8 @@
             </div>
           </div>
         </nav> 
- 
+        <h1 style="font-family:'Lobster', cursive; color:#752042;"class="display-4" id="resume"><a href="#">Timeline</a></h1>
+
 
     <hr class="my-4">
 </div>
