--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <head>
   <title>Doenet</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" href="img/resume-favicon.png" type="image/x-icon">
   <!--Bootstrap-->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -40,7 +39,8 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-light"><p style="font-family:'Lobster', cursive; color:#752042; display: inline; font-size: 30px;"class="display-4" id="resume"><a href="index.html">D<img src="DoenetLogo.png" style="height:15px; width:10px;">enet</a></p>
           <a class="navbar-brand" href="#"></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+            <span class="navbar-toggler-icon">
+           </span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
